docs/api/qiskit/0.29/qiskit.circuit.library.ZFeatureMap.mdx
---
title: ZFeatureMap (v0.29)
description: API reference for qiskit.circuit.library.ZFeatureMap in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.ZFeatureMap
---

# ZFeatureMap

<Class id="qiskit.circuit.library.ZFeatureMap" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/data_preparation/z_feature_map.py" signature="ZFeatureMap(feature_dimension, reps=2, data_map_func=None, insert_barriers=False, name='ZFeatureMap')" modifiers="class">
  Bases: `qiskit.circuit.library.data_preparation.pauli_feature_map.PauliFeatureMap`

  The first order Pauli Z-evolution circuit.

  On 3 qubits and with 2 repetitions the circuit is represented by:

  ```python
  ┌───┐┌──────────────┐┌───┐┌──────────────┐
  ┤ H ├┤ U1(2.0*x[0]) ├┤ H ├┤ U1(2.0*x[0]) ├
  ├───┤├──────────────┤├───┤├──────────────┤
  ┤ H ├┤ U1(2.0*x[1]) ├┤ H ├┤ U1(2.0*x[1]) ├
  ├───┤├──────────────┤├───┤├──────────────┤
  ┤ H ├┤ U1(2.0*x[2]) ├┤ H ├┤ U1(2.0*x[2]) ├
  └───┘└──────────────┘└───┘└──────────────┘
  ```

  This is a sub-class of [`PauliFeatureMap`](qiskit.circuit.library.PauliFeatureMap "qiskit.circuit.library.PauliFeatureMap") where the Pauli strings are fixed as \[‘Z’]. As a result the first order expansion will be a circuit without entangling gates.

  **Examples**

  ```python
  >>> prep = ZFeatureMap(3, reps=3, insert_barriers=True)
  >>> print(prep)
       ┌───┐ ░ ┌──────────────┐ ░ ┌───┐ ░ ┌──────────────┐ ░ ┌───┐ ░ ┌──────────────┐
  q_0: ┤ H ├─░─┤ U1(2.0*x[0]) ├─░─┤ H ├─░─┤ U1(2.0*x[0]) ├─░─┤ H ├─░─┤ U1(2.0*x[0]) ├
       ├───┤ ░ ├──────────────┤ ░ ├───┤ ░ ├──────────────┤ ░ ├───┤ ░ ├──────────────┤
  q_1: ┤ H ├─░─┤ U1(2.0*x[1]) ├─░─┤ H ├─░─┤ U1(2.0*x[1]) ├─░─┤ H ├─░─┤ U1(2.0*x[1]) ├
       ├───┤ ░ ├──────────────┤ ░ ├───┤ ░ ├──────────────┤ ░ ├───┤ ░ ├──────────────┤
  q_2: ┤ H ├─░─┤ U1(2.0*x[2]) ├─░─┤ H ├─░─┤ U1(2.0*x[2]) ├─░─┤ H ├─░─┤ U1(2.0*x[2]) ├
       └───┘ ░ └──────────────┘ ░ └───┘ ░ └──────────────┘ ░ └───┘ ░ └──────────────┘
  ```

  ```python
  >>> data_map = lambda x: x[0]*x[0] + 1  # note: input is an array
  >>> prep = ZFeatureMap(3, reps=1, data_map_func=data_map)
  >>> print(prep)
       ┌───┐┌───────────────────────┐
  q_0: ┤ H ├┤ U1(2.0*x[0]**2 + 2.0) ├
       ├───┤├───────────────────────┤
  q_1: ┤ H ├┤ U1(2.0*x[1]**2 + 2.0) ├
       ├───┤├───────────────────────┤
  q_2: ┤ H ├┤ U1(2.0*x[2]**2 + 2.0) ├
       └───┘└───────────────────────┘
  ```

  ```python
  >>> classifier = ZFeatureMap(3, reps=1) + RY(3, reps=1)
  >>> print(classifier)
       ┌───┐┌──────────────┐┌──────────┐      ┌──────────┐
  q_0: ┤ H ├┤ U1(2.0*x[0]) ├┤ RY(θ[0]) ├─■──■─┤ RY(θ[3]) ├────────────
       ├───┤├──────────────┤├──────────┤ │  │ └──────────┘┌──────────┐
  q_1: ┤ H ├┤ U1(2.0*x[1]) ├┤ RY(θ[1]) ├─■──┼──────■──────┤ RY(θ[4]) ├
       ├───┤├──────────────┤├──────────┤    │      │      ├──────────┤
  q_2: ┤ H ├┤ U1(2.0*x[2]) ├┤ RY(θ[2]) ├────■──────■──────┤ RY(θ[5]) ├
       └───┘└──────────────┘└──────────┘                  └──────────┘
  ```

  Create a new first-order Pauli-Z expansion circuit.

  **Parameters**

  *   **feature\_dimension** (`int`) – The number of features
  *   **reps** (`int`) – The number of repeated circuits. Defaults to 2, has a minimum value of 1.
  *   **data\_map\_func** (`Optional`\[`Callable`\[\[`ndarray`], `float`]]) – A mapping function for data x which can be supplied to override the default mapping from `self_product()`.
  *   **insert\_barriers** (`bool`) – If True, barriers are inserted in between the evolution instructions and hadamard layers.

  ## Attributes

  ### alpha

  <Attribute id="qiskit.circuit.library.ZFeatureMap.alpha">
    The Pauli rotation factor (alpha).

    **Return type**

    `float`

    **Returns**

    The Pauli rotation factor.
  </Attribute>

  ### ancillas

  <Attribute id="qiskit.circuit.library.ZFeatureMap.ancillas">
    Returns a list of ancilla bits in the order that the registers were added.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.ZFeatureMap.calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.ZFeatureMap.clbits">
    Returns a list of classical bits in the order that the registers were added.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.ZFeatureMap.data" />

  ### entanglement

  <Attribute id="qiskit.circuit.library.ZFeatureMap.entanglement">
    Get the entanglement strategy.

    **Return type**

    `Union`\[`str`, `List`\[`str`], `List`\[`List`\[`str`]], `List`\[`int`], `List`\[`List`\[`int`]], `List`\[`List`\[`List`\[`int`]]], `List`\[`List`\[`List`\[`List`\[`int`]]]], `Callable`\[\[`int`], `str`], `Callable`\[\[`int`], `List`\[`List`\[`int`]]]]

    **Returns**

    The entanglement strategy, see `get_entangler_map()` for more detail on how the format is interpreted.
  </Attribute>

  ### entanglement\_blocks

  <Attribute id="qiskit.circuit.library.ZFeatureMap.entanglement_blocks" />

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.ZFeatureMap.extension_lib" attributeValue="'include &#x22;qelib1.inc&#x22;;'" />

  ### feature\_dimension

  <Attribute id="qiskit.circuit.library.ZFeatureMap.feature_dimension">
    Returns the feature dimension (which is equal to the number of qubits).

    **Return type**

    `int`

    **Returns**

    The feature dimension of this feature map.
  </Attribute>

  ### global\_phase

  <Attribute id="qiskit.circuit.library.ZFeatureMap.global_phase">
    Return the global phase of the circuit in radians.
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.ZFeatureMap.header" attributeValue="'OPENQASM 2.0;'" />

  ### initial\_state

  <Attribute id="qiskit.circuit.library.ZFeatureMap.initial_state">
    Return the initial state that is added in front of the n-local circuit.

    **Return type**

    `Any`

    **Returns**

    The initial state.
  </Attribute>

  ### insert\_barriers

  <Attribute id="qiskit.circuit.library.ZFeatureMap.insert_barriers">
    If barriers are inserted in between the layers or not.

    **Return type**

    `bool`

    **Returns**

    True, if barriers are inserted in between the layers, False if not.
  </Attribute>

  ### instances

  <Attribute id="qiskit.circuit.library.ZFeatureMap.instances" attributeValue="16" />

  ### metadata

  <Attribute id="qiskit.circuit.library.ZFeatureMap.metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_layers

  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_layers">
    Return the number of layers in the n-local circuit.

    **Return type**

    `int`

    **Returns**

    The number of layers in the circuit.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_parameters">
    **Return type**

    `int`
  </Attribute>

  ### num\_parameters\_settable

  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_parameters_settable">
    The number of distinct parameters.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_qubits">
    Returns the number of qubits in this circuit.

    **Return type**

    `int`

    **Returns**

    The number of qubits.
  </Attribute>

  ### ordered\_parameters

  <Attribute id="qiskit.circuit.library.ZFeatureMap.ordered_parameters">
    The parameters used in the underlying circuit.

    This includes float values and duplicates.

    **Examples**

    ```python
    >>> # prepare circuit ...
    >>> print(nlocal)
         ┌───────┐┌──────────┐┌──────────┐┌──────────┐
    q_0: ┤ Ry(1) ├┤ Ry(θ[1]) ├┤ Ry(θ[1]) ├┤ Ry(θ[3]) ├
         └───────┘└──────────┘└──────────┘└──────────┘
    >>> nlocal.parameters
    {Parameter(θ[1]), Parameter(θ[3])}
    >>> nlocal.ordered_parameters
    [1, Parameter(θ[1]), Parameter(θ[1]), Parameter(θ[3])]
    ```

    **Return type**

    `List`\[`Parameter`]

    **Returns**

    The parameters objects used in the circuit.
  </Attribute>

  ### parameter\_bounds

  <Attribute id="qiskit.circuit.library.ZFeatureMap.parameter_bounds">
    The parameter bounds for the unbound parameters in the circuit.

    **Return type**

    `Optional`\[`List`\[`Tuple`\[`float`, `float`]]]

    **Returns**

    A list of pairs indicating the bounds, as (lower, upper). None indicates an unbounded parameter in the corresponding direction. If None is returned, problem is fully unbounded.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.ZFeatureMap.parameters">
    **Return type**

    `ParameterView`
  </Attribute>

  ### paulis

  <Attribute id="qiskit.circuit.library.ZFeatureMap.paulis">
    The Pauli strings used in the entanglement of the qubits.

    **Return type**

    `List`\[`str`]

    **Returns**

    The Pauli strings as list.
  </Attribute>

  ### preferred\_init\_points

  <Attribute id="qiskit.circuit.library.ZFeatureMap.preferred_init_points">
    The initial points for the parameters. Can be stored as initial guess in optimization.

    **Return type**

    `Optional`\[`List`\[`float`]]

    **Returns**

    The initial values for the parameters, or None, if none have been set.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.ZFeatureMap.prefix" attributeValue="'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.ZFeatureMap.qregs">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.ZFeatureMap.qubits">
    Returns a list of quantum bits in the order that the registers were added.
  </Attribute>

  ### reps

  <Attribute id="qiskit.circuit.library.ZFeatureMap.reps">
    The number of times rotation and entanglement block are repeated.

    **Return type**

    `int`

    **Returns**

    The number of repetitions.
  </Attribute>

  ### rotation\_blocks

  <Attribute id="qiskit.circuit.library.ZFeatureMap.rotation_blocks">
    The blocks in the rotation layers.

    **Return type**

    `List`\[`Instruction`]

    **Returns**

    The blocks in the rotation layers.
  </Attribute>
</Class>

