docs/api/qiskit/0.43/qiskit.circuit.library.ZFeatureMap.mdx
---
title: ZFeatureMap
description: API reference for qiskit.circuit.library.ZFeatureMap
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.ZFeatureMap
---

# ZFeatureMap

<Class id="qiskit.circuit.library.ZFeatureMap" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/library/data_preparation/z_feature_map.py" signature="ZFeatureMap(feature_dimension, reps=2, data_map_func=None, parameter_prefix='x', insert_barriers=False, name='ZFeatureMap')">
  Bases: [`PauliFeatureMap`](qiskit.circuit.library.PauliFeatureMap "qiskit.circuit.library.data_preparation.pauli_feature_map.PauliFeatureMap")

  The first order Pauli Z-evolution circuit.

  On 3 qubits and with 2 repetitions the circuit is represented by:

  ```python
  ┌───┐┌──────────────┐┌───┐┌──────────────┐
  ┤ H ├┤ U1(2.0*x[0]) ├┤ H ├┤ U1(2.0*x[0]) ├
  ├───┤├──────────────┤├───┤├──────────────┤
  ┤ H ├┤ U1(2.0*x[1]) ├┤ H ├┤ U1(2.0*x[1]) ├
  ├───┤├──────────────┤├───┤├──────────────┤
  ┤ H ├┤ U1(2.0*x[2]) ├┤ H ├┤ U1(2.0*x[2]) ├
  └───┘└──────────────┘└───┘└──────────────┘
  ```

  This is a sub-class of [`PauliFeatureMap`](qiskit.circuit.library.PauliFeatureMap "qiskit.circuit.library.PauliFeatureMap") where the Pauli strings are fixed as \[‘Z’]. As a result the first order expansion will be a circuit without entangling gates.

  **Examples**

  ```python
  >>> prep = ZFeatureMap(3, reps=3, insert_barriers=True)
  >>> print(prep)
       ┌───┐ ░ ┌──────────────┐ ░ ┌───┐ ░ ┌──────────────┐ ░ ┌───┐ ░ ┌──────────────┐
  q_0: ┤ H ├─░─┤ U1(2.0*x[0]) ├─░─┤ H ├─░─┤ U1(2.0*x[0]) ├─░─┤ H ├─░─┤ U1(2.0*x[0]) ├
       ├───┤ ░ ├──────────────┤ ░ ├───┤ ░ ├──────────────┤ ░ ├───┤ ░ ├──────────────┤
  q_1: ┤ H ├─░─┤ U1(2.0*x[1]) ├─░─┤ H ├─░─┤ U1(2.0*x[1]) ├─░─┤ H ├─░─┤ U1(2.0*x[1]) ├
       ├───┤ ░ ├──────────────┤ ░ ├───┤ ░ ├──────────────┤ ░ ├───┤ ░ ├──────────────┤
  q_2: ┤ H ├─░─┤ U1(2.0*x[2]) ├─░─┤ H ├─░─┤ U1(2.0*x[2]) ├─░─┤ H ├─░─┤ U1(2.0*x[2]) ├
       └───┘ ░ └──────────────┘ ░ └───┘ ░ └──────────────┘ ░ └───┘ ░ └──────────────┘
  ```

  ```python
  >>> data_map = lambda x: x[0]*x[0] + 1  # note: input is an array
  >>> prep = ZFeatureMap(3, reps=1, data_map_func=data_map)
  >>> print(prep)
       ┌───┐┌───────────────────────┐
  q_0: ┤ H ├┤ U1(2.0*x[0]**2 + 2.0) ├
       ├───┤├───────────────────────┤
  q_1: ┤ H ├┤ U1(2.0*x[1]**2 + 2.0) ├
       ├───┤├───────────────────────┤
  q_2: ┤ H ├┤ U1(2.0*x[2]**2 + 2.0) ├
       └───┘└───────────────────────┘
  ```

  ```python
  >>> classifier = ZFeatureMap(3, reps=1) + RY(3, reps=1)
  >>> print(classifier)
       ┌───┐┌──────────────┐┌──────────┐      ┌──────────┐
  q_0: ┤ H ├┤ U1(2.0*x[0]) ├┤ RY(θ[0]) ├─■──■─┤ RY(θ[3]) ├────────────
       ├───┤├──────────────┤├──────────┤ │  │ └──────────┘┌──────────┐
  q_1: ┤ H ├┤ U1(2.0*x[1]) ├┤ RY(θ[1]) ├─■──┼──────■──────┤ RY(θ[4]) ├
       ├───┤├──────────────┤├──────────┤    │      │      ├──────────┤
  q_2: ┤ H ├┤ U1(2.0*x[2]) ├┤ RY(θ[2]) ├────■──────■──────┤ RY(θ[5]) ├
       └───┘└──────────────┘└──────────┘                  └──────────┘
  ```

  Create a new first-order Pauli-Z expansion circuit.

  **Parameters**

  *   **feature\_dimension** (*int*) – The number of features
  *   **reps** (*int*) – The number of repeated circuits. Defaults to 2, has a minimum value of 1.
  *   **data\_map\_func** (*Callable\[\[*[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")*], float] | None*) – A mapping function for data x which can be supplied to override the default mapping from `self_product()`.
  *   **parameter\_prefix** (*str*) – The prefix used if default parameters are generated.
  *   **insert\_barriers** (*bool*) – If True, barriers are inserted in between the evolution instructions and hadamard layers.

  ## Attributes

  ### alpha

  <Attribute id="qiskit.circuit.library.ZFeatureMap.alpha" name="alpha">
    The Pauli rotation factor (alpha).

    **Returns**

    The Pauli rotation factor.
  </Attribute>

  ### ancillas

  <Attribute id="qiskit.circuit.library.ZFeatureMap.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.ZFeatureMap.calibrations" name="calibrations">
    Return calibration dictionary.

    The custom pulse definition of a given gate is of the form `{'gate_name': {(qubits, params): schedule}}`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.ZFeatureMap.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.ZFeatureMap.data" name="data" />

  ### entanglement

  <Attribute id="qiskit.circuit.library.ZFeatureMap.entanglement" name="entanglement">
    Get the entanglement strategy.

    **Returns**

    The entanglement strategy, see `get_entangler_map()` for more detail on how the format is interpreted.
  </Attribute>

  ### entanglement\_blocks

  <Attribute id="qiskit.circuit.library.ZFeatureMap.entanglement_blocks" name="entanglement_blocks" />

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.ZFeatureMap.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### feature\_dimension

  <Attribute id="qiskit.circuit.library.ZFeatureMap.feature_dimension" name="feature_dimension">
    Returns the feature dimension (which is equal to the number of qubits).

    **Returns**

    The feature dimension of this feature map.
  </Attribute>

  ### global\_phase

  <Attribute id="qiskit.circuit.library.ZFeatureMap.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.ZFeatureMap.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### initial\_state

  <Attribute id="qiskit.circuit.library.ZFeatureMap.initial_state" name="initial_state">
    Return the initial state that is added in front of the n-local circuit.

    **Returns**

    The initial state.
  </Attribute>

  ### insert\_barriers

  <Attribute id="qiskit.circuit.library.ZFeatureMap.insert_barriers" name="insert_barriers">
    If barriers are inserted in between the layers or not.

    **Returns**

    `True`, if barriers are inserted in between the layers, `False` if not.
  </Attribute>

  ### instances

  <Attribute id="qiskit.circuit.library.ZFeatureMap.instances" name="instances" attributeValue="= 125" />

  ### layout

  <Attribute id="qiskit.circuit.library.ZFeatureMap.layout" name="layout">
    Return any associated layout information anout the circuit

    This attribute contains an optional [`TranspileLayout`](qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") object. This is typically set on the output from [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") or [`PassManager.run()`](qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") to retain information about the permutations caused on the input circuit by transpilation.

    There are two types of permutations caused by the [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") function, an initial layout which permutes the qubits based on the selected physical qubits on the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target"), and a final layout which is an output permutation caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")s inserted during routing.
  </Attribute>

  ### metadata

  <Attribute id="qiskit.circuit.library.ZFeatureMap.metadata" name="metadata">
    The user provided metadata associated with the circuit.

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_clbits" name="num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_layers

  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_layers" name="num_layers">
    Return the number of layers in the n-local circuit.

    **Returns**

    The number of layers in the circuit.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_parameters" name="num_parameters" />

  ### num\_parameters\_settable

  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_parameters_settable" name="num_parameters_settable">
    The number of distinct parameters.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_qubits" name="num_qubits">
    Returns the number of qubits in this circuit.

    **Returns**

    The number of qubits.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.ZFeatureMap.op_start_times" name="op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    **AttributeError** – When circuit is not scheduled.
  </Attribute>

  ### ordered\_parameters

  <Attribute id="qiskit.circuit.library.ZFeatureMap.ordered_parameters" name="ordered_parameters">
    The parameters used in the underlying circuit.

    This includes float values and duplicates.

    **Examples**

    ```python
    >>> # prepare circuit ...
    >>> print(nlocal)
         ┌───────┐┌──────────┐┌──────────┐┌──────────┐
    q_0: ┤ Ry(1) ├┤ Ry(θ[1]) ├┤ Ry(θ[1]) ├┤ Ry(θ[3]) ├
         └───────┘└──────────┘└──────────┘└──────────┘
    >>> nlocal.parameters
    {Parameter(θ[1]), Parameter(θ[3])}
    >>> nlocal.ordered_parameters
    [1, Parameter(θ[1]), Parameter(θ[1]), Parameter(θ[3])]
    ```

    **Returns**

    The parameters objects used in the circuit.
  </Attribute>

  ### parameter\_bounds

  <Attribute id="qiskit.circuit.library.ZFeatureMap.parameter_bounds" name="parameter_bounds">
    The parameter bounds for the unbound parameters in the circuit.

    **Returns**

    A list of pairs indicating the bounds, as (lower, upper). None indicates an unbounded parameter in the corresponding direction. If `None` is returned, problem is fully unbounded.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.ZFeatureMap.parameters" name="parameters" />

  ### paulis

  <Attribute id="qiskit.circuit.library.ZFeatureMap.paulis" name="paulis">
    The Pauli strings used in the entanglement of the qubits.

    **Returns**

    The Pauli strings as list.
  </Attribute>

  ### preferred\_init\_points

  <Attribute id="qiskit.circuit.library.ZFeatureMap.preferred_init_points" name="preferred_init_points">
    The initial points for the parameters. Can be stored as initial guess in optimization.

    **Returns**

    The initial values for the parameters, or None, if none have been set.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.ZFeatureMap.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.ZFeatureMap.qregs" name="qregs" attributeTypeHint="list[QuantumRegister]">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.ZFeatureMap.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.
  </Attribute>

  ### reps

  <Attribute id="qiskit.circuit.library.ZFeatureMap.reps" name="reps">
    The number of times rotation and entanglement block are repeated.

    **Returns**

    The number of repetitions.
  </Attribute>

  ### rotation\_blocks

  <Attribute id="qiskit.circuit.library.ZFeatureMap.rotation_blocks" name="rotation_blocks">
    The blocks in the rotation layers.

    **Returns**

    The blocks in the rotation layers.
  </Attribute>
</Class>

